--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -606,3 +606,13 @@ body {
     border-radius: 10px;
     margin-bottom: 1rem;
 }
+
+.fade-enter-active,
+.fade-leave-active {
+  transition: opacity 0.2s ease;
+}
+
+.fade-enter-from,
+.fade-leave-to {
+  opacity: 0;
+}
